# api/openapi.yaml
@@ -24,6 +24,8 @@ tags:
   name: users
 - description: not yet ready
   name: movies
+- description: not yet ready
+  name: trendingmovies
 paths:
   /deploys:
     post:
@@ -424,6 +426,139 @@ paths:
       - movies
       x-method-get-by-params: "true"
       x-eov-operation-handler: controllers/MoviesController
+  /trendingmovies:
+    post:
+      operationId: createtrendingmovies
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/trendingmovies'
+        description: data to be created
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/trendingmovies'
+          description: successful operation
+      summary: Creates the data
+      tags:
+      - trendingmovies
+      x-eov-operation-handler: controllers/TrendingmoviesController
+  /trendingmovies/{trendingmoviesId}:
+    delete:
+      operationId: deletetrendingmovies
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: trendingmoviesId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          description: successful operation
+      summary: Delete the element
+      tags:
+      - trendingmovies
+      x-eov-operation-handler: controllers/TrendingmoviesController
+    get:
+      operationId: gettrendingmovies
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: trendingmoviesId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/trendingmovies'
+          description: successful operation
+      summary: Get the element
+      tags:
+      - trendingmovies
+      x-eov-operation-handler: controllers/TrendingmoviesController
+    put:
+      operationId: updatetrendingmovies
+      parameters:
+      - description: the Id parameter
+        explode: false
+        in: path
+        name: trendingmoviesId
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/trendingmovies'
+        description: data to be updated
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/trendingmovies'
+          description: successful operation
+      summary: Updates the element
+      tags:
+      - trendingmovies
+      x-eov-operation-handler: controllers/TrendingmoviesController
+  /trendingmovies/getAll:
+    get:
+      operationId: getAlltrendingmovies
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/trendingmovies'
+                type: array
+          description: successful operation
+      summary: Get all the data
+      tags:
+      - trendingmovies
+      x-method-getAll: "true"
+      x-eov-operation-handler: controllers/TrendingmoviesController
+  /trendingmovies/getByParams:
+    get:
+      operationId: getByParamstrendingmovies
+      parameters:
+      - description: the query based on which the search is performed
+        explode: true
+        in: query
+        name: filter
+        required: true
+        schema:
+          type: string
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/trendingmovies'
+                type: array
+          description: successful operation
+      summary: Get all the data based on user query
+      tags:
+      - trendingmovies
+      x-method-get-by-params: "true"
+      x-eov-operation-handler: controllers/TrendingmoviesController
 components:
   schemas:
     deploys:
@@ -451,6 +586,13 @@ components:
       - user
       type: object
     movies:
+      example:
+        _id: _id
+      properties:
+        _id:
+          type: string
+      type: object
+    trendingmovies:
       example:
         _id: _id
       properties:
