# models/Trendingmovies.js
@@ -1,0 +1,15 @@
+
+const mongoose = require('mongoose');
+const Schema = mongoose.Schema;
+
+const trendingmoviesSchema = new Schema({
+Underscoreid:String 
+
+
+
+})
+
+module.exports = {
+  Trendingmovies : mongoose.model('trendingmovies', trendingmoviesSchema),
+}
+
