# models/index.js
@@ -1,8 +1,10 @@
 const deploys = require('./deploys');
 const movies = require('./movies');
+const trendingmovies = require('./trendingmovies');
 const users = require('./users');
 
 module.exports = {
   deploys,
   movies,
+  trendingmovies,
   users};
